# ironflyer-co

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  .semgrep.yml  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  GAP_ANALYSIS.md  GAP_CLOSURE_2026-05-27.md  QUICKSTART.md  README.md  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  tsconfig.base.json
.github/: CODEOWNERS  dependabot.yml
.ironflyer/: architecture.json  quality-policy.json
assets/: store-dj-performance.avif
core/orchestrator/internal/business/blueprints/templates/python-flask-api/: pyproject.toml
core/orchestrator/internal/business/blueprints/templates/python-flask-api/migrations/: 001_init.sql
design-reference/: README.md
docs/: ANTI_BLOAT_ENGINE.md  ARCHITECTURE_ANALYTICS.md  ARCHITECTURE_APPSEC_CORE.md  ARCHITECTURE_CLIENTS.md  ARCHITECTURE_CLOUD_IDE.md  ARCHITECTURE_DEPLOY_DOMAINS.md  ARCHITECTURE_DOMAIN_MODULES.md  ARCHITECTURE_EVENTS.md  ARCHITECTURE_MEMORY_GRAPH.md  ARCHITECTURE_POLICY_SECURITY.md  ARCHITECTURE_PROFITGUARD.md  ARCHITECTURE_RUNTIME_SCALE.md  ARCHITECTURE_WORKFLOWS.md  BRAND_CONSTITUTION.md  BRAND_SYSTEM_2026-05-28.md  CHAT_SECURITY.md  CLIENTS_STATUS_2026-05-28.md  CLOSEOUT_CHECKLIST.md  DEMO_RUN.md  FEEDBACK_BRAIN.md  FIGMA_TO_PRODUCT_UNIFIED_PLAYBOOK_2026-05-26.md  FINAL_STATE.md  LAUNCH_CHECKLIST.md  MOBILE_STARTERS_AUDIT_2026-05-26.md  OBSERVABILITY_GLITCHTIP.md  OVERNIGHT_2026-05-28.md  PERF_BUDGETS.md  PROJECT_CLOSEOUT_PLAN.md  SECURITY_HARDENING_2026-05-26.md  V22_PLAN.md
infra/: Dockerfile.mobile-runtime  (+1 more)
(+3367 files in other folders)
