[project]
name = "ironflyer-flask-api"
version = "0.1.0"
description = "Ironflyer Python Flask + SQLAlchemy blueprint."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
ignore_missing_imports = true
